--- a/charts-2018.html
+++ b/charts-2018.html
@@ -81,9 +81,9 @@
                 <div class="chart" id="chartBugByProTest"></div>
                 <!-- <p class="chart-desc">
                     依据线上线下bug数区分，bug总数如下： <br>
-                    蔺智清：86 <br>
-                    王明佳：39 <br>
-                    刘海亮：27 
+                    lzq：86 <br>
+                    wmj：39 <br>
+                    lhl：27 
                 </p> -->
             </li>
             <li class="chart-item">
@@ -91,9 +91,9 @@
                 <div class="chart" id="chartBugByXuqiuBug"></div>
                 <!-- <p class="chart-desc">
                     依据线上线下bug数区分，bug总数如下： <br>
-                    蔺智清：86 <br>
-                    王明佳：39 <br>
-                    刘海亮：27 
+                    lzq：86 <br>
+                    wmj：39 <br>
+                    lhl：27 
                 </p> -->
             </li>
 
